fix dart code metrics recomendations

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -34,7 +34,7 @@ dart_code_metrics:
     - prefer-correct-identifier-length:
         max-identifier-length: 30
         min-identifier-length: 2
-        exceptions: ['id', 'qa', 'x', 'y', 'z', 'i']
+        exceptions: ['id', 'qa', 'x', 'y', 'z', 'i', 'm']
         exclude:
           - test/**
     - prefer-correct-type-name
