--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -29,12 +29,11 @@ dart_code_metrics:
     - double-literal-format
     - newline-before-return
     - no-boolean-literal-compare
-    - no-empty-block
     - prefer-const-border-radius
     - prefer-correct-identifier-length:
         max-identifier-length: 30
         min-identifier-length: 2
-        exceptions: ['id', 'qa', 'x', 'y', 'z', 'i', 'm']
+        exceptions: ['id', 'qa', 'x', 'y', 'z', 'i', 'j', 'm']
         exclude:
           - test/**
     - prefer-correct-type-name
