--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^0.23.0+1
+  flutter_localizations:
+    sdk: flutter
   intl: ^0.17.0
 
 dev_dependencies:
