--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,15 +18,17 @@ dependencies:
   flutter_svg: ^0.23.0+1
   intl: ^0.17.0
   json_annotation: ^4.7.0
+  retrofit: ^3.3.1
 
 dev_dependencies:
   build_runner: ^2.3.2
-  json_serializable: ^6.5.4
   dart_code_metrics: ^4.6.0
 
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.5.4
+  retrofit_generator: ^4.2.0
 
 flutter:
   uses-material-design: true
