--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_svg: ^0.23.0+1
   intl: ^0.17.0
   json_annotation: ^4.7.0
+  path_provider: ^2.0.11
   retrofit: ^3.3.1
 
 dev_dependencies:
