fix some code metrics recomendations

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .idea
 .flutter-plugins-dependencies
 build/
+metrics/
 **/android/**/GeneratedPluginRegistrant.java
 ios/.generated/
 ios/Flutter/Generated.xcconfig
