--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   intl: ^0.17.0
   json_annotation: ^4.7.0
   path_provider: ^2.0.11
+  provider: ^6.0.4
   retrofit: ^3.3.1
 
 dev_dependencies:
