--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,11 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_mobx: ^2.0.6+5
   flutter_svg: ^0.23.0+1
   intl: ^0.17.0
   json_annotation: ^4.7.0
+  mobx: ^2.1.3
   path_provider: ^2.0.11
   provider: ^6.0.4
   retrofit: ^3.3.1
@@ -25,6 +27,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.3.2
   dart_code_metrics: ^4.6.0
+  mobx_codegen: ^2.1.1
 
   flutter_lints: ^1.0.0
   flutter_test:
