--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   dio: ^4.0.6
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.1
   flutter_localizations:
     sdk: flutter
   flutter_mobx: ^2.0.6+5
@@ -27,12 +28,12 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.3.2
   dart_code_metrics: ^4.6.0
-  mobx_codegen: ^2.1.1
 
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
   json_serializable: ^6.5.4
+  mobx_codegen: ^2.1.1
   retrofit_generator: ^4.2.0
 
 flutter:
