--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_mobx: ^2.0.6+5
+  flutter_redux: ^0.10.0
   flutter_svg: ^0.23.0+1
   freezed_annotation: ^2.2.0
   intl: ^0.17.0
@@ -24,6 +25,7 @@ dependencies:
   mobx: ^2.1.3
   path_provider: ^2.0.11
   provider: ^6.0.4
+  redux: ^5.0.0
   retrofit: ^3.3.1
 
 dev_dependencies:
