code metrics fixes

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -37,10 +37,10 @@ dart_code_metrics:
         exclude:
           - test/**
     - prefer-correct-type-name
-    - prefer_extracting_callbacks
     - prefer-match-file-name:
         exclude:
           - test/**
+          - lib/**_wm.dart
           - lib/main.dart
     - prefer-first
     - prefer-last
