--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   path_provider: ^2.0.11
   provider: ^6.0.4
   retrofit: ^3.3.1
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   build_runner: ^2.3.2
