--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
+  drift: ^2.4.2
   elementary: ^1.5.0
   flutter:
     sdk: flutter
@@ -21,13 +22,16 @@ dependencies:
   freezed_annotation: ^2.2.0
   intl: ^0.17.0
   json_annotation: ^4.7.0
+  path: ^1.8.2
   path_provider: ^2.0.11
   provider: ^6.0.4
   retrofit: ^3.3.1
+  sqlite3_flutter_libs: ^0.5.12
 
 dev_dependencies:
   build_runner: ^2.3.2
   dart_code_metrics: ^5.0.1
+  drift_dev: ^2.4.1
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
