--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^0.23.0+1
   freezed_annotation: ^2.2.0
+  image_picker: ^0.8.6
   intl: ^0.17.0
   json_annotation: ^4.7.0
   path_provider: ^2.0.11
