--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,14 +20,15 @@ dependencies:
     sdk: flutter
   flutter_svg: ^0.23.0+1
   freezed_annotation: ^2.2.0
+  image_picker: ^0.8.6
   intl: ^0.17.0
   json_annotation: ^4.7.0
   path: ^1.8.2
   path_provider: ^2.0.11
   provider: ^6.0.4
   retrofit: ^3.3.1
-  sqlite3_flutter_libs: ^0.5.12
   shared_preferences: ^2.0.15
+  sqlite3_flutter_libs: ^0.5.12
 
 dev_dependencies:
   build_runner: ^2.3.2
