--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,15 +12,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   drift: ^2.4.2
-  elementary: ^1.5.0
+  elementary: ^2.0.0
   file_picker: ^5.2.4
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  flutter_image_compress: ^1.1.3
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^0.23.0+1
   freezed_annotation: ^2.2.0
+  http_parser: ^4.0.2
   image_picker: ^0.8.6
   intl: ^0.17.0
   json_annotation: ^4.7.0
