--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^0.23.0+1
   freezed_annotation: ^2.2.0
+  geolocator: ^9.0.2
   http_parser: ^4.0.2
   image_picker: ^0.8.6
   intl: ^0.17.0
@@ -32,6 +33,7 @@ dependencies:
   retrofit: ^3.3.1
   shared_preferences: ^2.0.15
   sqlite3_flutter_libs: ^0.5.12
+  yandex_mapkit: ^3.2.0
 
 dev_dependencies:
   build_runner: ^2.3.2
