--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,4 +65,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.yandex.android:maps.mobile:4.2.2-full'
 }
