--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   image_picker: ^0.8.6
   intl: ^0.17.0
   json_annotation: ^4.7.0
+  map_launcher: ^2.5.0+1
   path: ^1.8.2
   path_provider: ^2.0.11
   provider: ^6.0.4
