--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   flutter_image_compress: ^1.1.3
   flutter_localizations:
     sdk: flutter
-  flutter_svg: ^0.23.0+1
+  flutter_svg: ^2.0.1
   freezed_annotation: ^2.2.0
   geolocator: ^9.0.2
   http_parser: ^4.0.2
