--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
   <application
-        android:label="places"
+        android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher">
     <activity
             android:name=".MainActivity"
