--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,18 @@ dev_dependencies:
   build_runner: ^2.3.2
   dart_code_metrics: ^5.0.1
   drift_dev: ^2.4.1
+  flutter_launcher_icons: ^0.11.0
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
   freezed: ^2.3.0
   json_serializable: ^6.5.4
   retrofit_generator: ^4.2.0
+
+flutter_icons:
+  image_path: 'assets/icons/dev_app_icon.png'
+  android: true
+  ios: false
 
 flutter:
   uses-material-design: true
