--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,9 +6,10 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: ">=2.17.6 <3.0.0"
 
 dependencies:
+  auto_route: ^7.1.0
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   drift: ^2.4.2
@@ -37,6 +38,7 @@ dependencies:
   yandex_mapkit: ^3.2.0
 
 dev_dependencies:
+  auto_route_generator: ^7.0.0
   build_runner: ^2.3.2
   dart_code_metrics: ^5.0.1
   drift_dev: ^2.4.1
