--- a/flutter_launcher_icons-dev.yaml
+++ b/flutter_launcher_icons-dev.yaml
@@ -1,4 +1,4 @@
-flutter_icons:
+flutter_launcher_icons:
   image_path: 'assets/icons/dev_app_icon.png'
-  android: false
+  android: true
   ios: true
