--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,7 +49,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.shadrov.places.places"
+        applicationId "com.shadrov.places"
         minSdkVersion 21
         targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
@@ -76,21 +76,16 @@ android {
         }
     }
 
-    flavorDimensions "release-type"
+    flavorDimensions "default"
 
     productFlavors {
         dev {
-            dimension "release-type"
+            dimension "default"
             applicationIdSuffix ".dev"
         }
 
-        preprod {
-            dimension "release-type"
-            applicationIdSuffix ".profile"
-        }
-
         prod {
-            dimension "release-type"
+            dimension "default"
         }
     }
 }
