--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ ios/Runner/GeneratedPluginRegistrant.*
 # Support file for ci
 ~changed_list_file
 packages/template/ios/Flutter/flutter_export_environment.sh
+helpfull.txt
